--- a/Wardriver/res/values/strings.xml
+++ b/Wardriver/res/values/strings.xml
@@ -4,5 +4,15 @@
     <string name="app_name">Wardriver</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    
+    <string name="menu_record_start">Start recording</string>
+    <string name="menu_record_stop">Stop recording</string>
+    <string name="menu_options">Options</string>
+    <string name="menu_testWifi">Test Wi-Fi</string>
+    <string name="menu_testCompass">Test boussole</string>
+    <string name="menu_testPins">Test pins</string>
+    
+    <string name="pref_key_compass_offset">pref_key_compass_offset</string>
+    <string name="pref_key_wifi_scanrate">pref_key_wifi_scanrate</string>
 
 </resources>
