--- a/Wardriver/res/values/strings.xml
+++ b/Wardriver/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_options">Options</string>
     <string name="menu_testWifi">Test Wi-Fi</string>
     <string name="menu_testPins">Test pins</string>
+    <string name="menu_testPush">Test push</string>
     
     <string name="pref_key_compass_offset">pref_key_compass_offset</string>
     <string name="pref_key_wifi_scanrate">pref_key_wifi_scanrate</string>
