--- a/Wardriver/res/values/strings.xml
+++ b/Wardriver/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_testPush">Test push</string>
     
     <string name="pref_key_compass_offset">pref_key_compass_offset</string>
-    <string name="pref_key_wifi_scanrate">pref_key_wifi_scanrate</string>
+    <string name="pref_key_scanrate">pref_key_scanrate</string>
     
     <string name="info_gps">GPS infos</string>
 
